--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,7 +5,7 @@
 
 
 <div class="flex flex-col w-full items-center m-auto">
-  <div class="bg-white rounded-full w-max p-1 border-[1px] border-foreground/20">
+  <div class="rounded-full w-max p-1 border-[1px] border-foreground/20">
     {{ get_icon("logo", 42) }}
   </div>
 
@@ -24,8 +24,6 @@
     {{ suggestion("Give me ideas", "about how to plan my New Year resolutions") }}
     {{ suggestion("Write a Python script", "to automate sending daily email reports") }}
     {{ suggestion("Create a personal webpage for me", "after asking me three questions") }}
-
-
 
   </div>
 
