--- a/templates/chat.html
+++ b/templates/chat.html
@@ -29,7 +29,7 @@
 
 </div>
 
-<div class="absolute w-full bottom-2 inset-x-0 bg-red-10 p-8 flex justify-center">
+<div class="absolute w-full bottom-2 inset-x-0 p-8 flex justify-center">
 
   <form class="relative w-full max-w-[700px]" hx-ext="json-enc" hx-post="/chat">
     <textarea name="message" class="relative w-full rounded-md"></textarea>
