--- a/templates/chat-base.html
+++ b/templates/chat-base.html
@@ -20,26 +20,7 @@
         </a>
 
 
-
         <br />
-
-        <!-- <div class="text-foreground/50 p-2 text-xs font-medium">Pinned Chats</div>
-
-        <div class="flex flex-col">
-
-            <div class="flex items-center justify-between hover:bg-foreground/[.07] p-2 rounded-md cursor-pointer">
-                <a href="/dashboard/tags" class="hover:bg-gray-200 line-clamp-1">
-                    Users
-                </a>
-            </div>
-
-            <div class="flex items-center justify-between hover:bg-foreground/[.07] p-2 rounded-md cursor-pointer">
-                <a href="/dashboard/tags" class="hover:bg-gray-200 line-clamp-1">
-                    Users
-                </a>
-            </div>
-        </div> -->
-
 
         <br />
 
@@ -50,10 +31,18 @@
 
             {% for chat in chats %}
 
-            <div class="flex items-center justify-between hover:bg-foreground/[.07] p-2 rounded-md cursor-pointer">
+            <div id="chat-{{ chat.id }}" hx-boost="true"
+                class="relative group flex items-center justify-between hover:bg-foreground/[.07] p-2 rounded-md cursor-pointer">
                 <a href="/chat/{{ chat.id }}" class="hover:bg-gray-200 line-clamp-1 w-full">
                     {{ chat.name }}
                 </a>
+
+                <button hx-delete="/chat/{{ chat.id }}" hx-target="#chat-{{ chat.id }}" hx-swap="outerHTML"
+                    class="group-hover:flex hidden right-0 inset-y-0 items-center justify-center ">
+                    <span class=" rounded-full aspect-square w-max p-1 text-center">
+                        {{ get_icon("trash", 12) }}
+                    </span>
+                </button>
             </div>
 
             {% endfor %}
