feat: ex1 login

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 <div class="flex items-center justify-center pt-12">
 
 
-    <form class="flex flex-col max-w-[350px] gap-4 items-center" hx-post="/auth/login" hx-ext="json-enc">
+    <form class="flex flex-col max-w-[350px] gap-4 items-center" hx-ext="json-enc" {# HTMX Here #}>
 
 
         {{ get_icon("logo", 100) }}
